--- a/package.json
+++ b/package.json
@@ -1,28 +1,35 @@
 {
-  "name": "gaussian",
+  "name": "@tomgp/gaussian",
   "description": "A JavaScript model of a Gaussian distribution",
   "version": "1.1.0",
   "author": "Eric Woroshow <eric@ericw.ca>",
   "homepage": "https://github.com/errcw/gaussian",
   "repository": {
     "type": "git",
-    "url": "git://github.com/errcw/gaussian.git"
+    "url": "git://github.com/tomgp/gaussian.git"
   },
   "licenses": {
     "type": "MIT",
     "url": "http://github.com/errcw/gaussian/blob/master/LICENSE"
   },
   "main": "lib/gaussian",
+  "unpkg": "dist/gausian.js",
+  "files": ["dist/gausian.js", "lib/gaussian.js"],
   "scripts": {
-    "test": "nodeunit test"
+    "test": "nodeunit test",
+    "build": "./node_modules/.bin/rollup lib/gaussian.js --o dist/gaussian.js -f umd --name \"gaussian\""
   },
   "engines": {
-    "node": ">= 0.6.0"
+    "node": ">= 8"
   },
-  "keywords": [ "gaussian", "normal", "distribution" ],
-  "dependencies": {
-  },
+  "keywords": [
+    "gaussian",
+    "normal",
+    "distribution"
+  ],
+  "dependencies": {},
   "devDependencies": {
-    "nodeunit": ">= 0.7.x"
+    "nodeunit": ">= 0.7.x",
+    "rollup": "^0.55.3"
   }
 }
