--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@tomgp/gaussian",
   "description": "A JavaScript model of a Gaussian distribution",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "author": "Eric Woroshow <eric@ericw.ca>",
   "homepage": "https://github.com/errcw/gaussian",
   "repository": {
@@ -13,8 +13,8 @@
     "url": "http://github.com/errcw/gaussian/blob/master/LICENSE"
   },
   "main": "lib/gaussian",
-  "unpkg": "dist/gausian.js",
-  "files": ["dist/gausian.js", "lib/gaussian.js"],
+  "unpkg": "dist/gaussian.js",
+  "files": ["dist/gaussian.js", "lib/gaussian.js"],
   "scripts": {
     "test": "nodeunit test",
     "build": "./node_modules/.bin/rollup lib/gaussian.js --o dist/gaussian.js -f umd --name \"gaussian\""
